Fix spacing on the element after a blockquote

--- a/assets/css/components/markup.css
+++ b/assets/css/components/markup.css
@@ -45,6 +45,10 @@
     }
   }
 
+  blockquote + * {
+    @apply mt-4
+  }
+
   code {
     @apply -my-px px-1 py-px border border-gray-400 text-sm bg-gray-200
   }
